DSP-679 remove ds_colour__blue--lighter, which is no longer used DSP-717 remove ds_colour__background--primary-dim and replace its use with background--secondary remove SVG images for checkbox and radio, which are no longer used (we use CSS shapes, which still display in high contrast mode whereas these images did not)

--- a/src/components/summary-list/_summary-list.scss
+++ b/src/components/summary-list/_summary-list.scss
@@ -2,7 +2,7 @@
     #SUMMARY LIST
 \*------------------------------------*/
 
-$summary-card-header-background-colour: $ds_colour__background--primary--dim !default;
+$summary-card-header-background-colour: $ds_colour__background--secondary !default;
 
 .ds_summary-list {
     @include ds_block-margins--bottom;
