--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -5,7 +5,7 @@
 $table-border-colour: $ds_colour__border !default;
 $table-border-colour--light: $ds_colour__border--faint !default;
 $table-header-background-colour: $ds_colour__background--tertiary !default;
-$table-row-zebra-colour: $ds_colour__background--primary--dim !default;
+$table-row-zebra-colour: $ds_colour__background--secondary !default;
 
 
 
